--- a/src/configure.ac
+++ b/src/configure.ac
@@ -536,14 +536,15 @@ AC_COMPILE_IFELSE([
       end
 ])],[prog_f77_mismatched_args=yes])
     if test "$prog_f77_mismatched_args" != "yes" ; then
-        # try again with -wmismatch=foo1
-        save_FFLAGS="$FFLAGS"
-        # The best solution is to turn off errors on particular routines
-        # if that isn't possible (e.g., too many of them), then
-        # just try arguments that turn off all checking
-        for flags in ifelse($2,yes,,"-wmismatch=foo1") "-mismatch" "-fallow-argument-mismatch" ; do
+        if test "x" != "x$FCFLAGS"; then
+           save_FFLAGS="$FCFLAGS"
+        else
+           save_FFLAGS="$FFLAGS"
+        fi
+        # Try arguments that turn off all checking
+        for flags in "-mismatch_all" "-fallow-argument-mismatch"; do
             testok=no
-            FFLAGS="$FFLAGS $flags"
+            FCFLAGS="$flags"
             AC_COMPILE_IFELSE([
             AC_LANG_SOURCE([
         program main
@@ -569,6 +570,8 @@ AC_MSG_RESULT($prog_f77_mismatched_args)
 if test "$prog_f77_mismatched_args" = no ; then
     AC_MSG_ERROR([The Fortran compiler $F77 will not compile files that call 
 the same routine with arguments of different types.])
+else
+    FFLAGS="$FFLAGS $prog_f77_mismatched_args_parm" 
 fi
 
 
