--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,7 +117,8 @@ jobs:
       run: |
         cd cbuild
         make -j 8
-        make test
+        ctest -VV .
+        #make test
       shell: bash
 
 ##################################
