--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,7 +117,7 @@ jobs:
       run: |
         cd cbuild
         make -j 8
-        ctest -VV .
+        #ctest -VV .
         #make test
       shell: bash
 
@@ -139,5 +139,6 @@ jobs:
       run: |
         cd src
         make -j 8
+        cd examples/fortran
         make test
       shell: bash
