--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -469,6 +469,32 @@ if (CGNS_BUILD_TESTING)
   include (${PROJECT_SOURCE_DIR}/CTestConfig.cmake)
 endif ()
 
+#-----------------------------------------------------------------------------
+# Doxygen
+#-----------------------------------------------------------------------------
+
+# Find Doxygen package
+find_package(Doxygen)
+
+if (DOXYGEN_FOUND)
+    # set input and output files
+    set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/doxygen/doxygen.config.in)
+    set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config)
+
+    # request to configure the file
+    configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
+    message("Doxygen build started")
+
+    # Note: do not put "ALL" - this builds docs together with application EVERY TIME!
+    add_custom_target( docs
+        COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT "Generating API documentation with Doxygen"
+        VERBATIM )
+else (DOXYGEN_FOUND)
+  message(STATUS "To generate Doxygen documentation, Doxygen must be installed.")
+endif (DOXYGEN_FOUND)
+
 ########
 # CGNS #
 ########
